# opam-check-npm-deps

./: .gitignore  CHANGES.md  Makefile  README.md  dune-project  flake.nix  opam-check-npm-deps.opam
.github/workflows/: build-sample-project.yml  opam.yml
src/: Path.re  Path.rei  dune  main.ml  path.ml  path.mli
test/: dry-run.t  dune  error-no-node_module.t  error-non-eq-filter.t  error-version-not-match.t  main.t  more-than-one-depext.t  more-than-one-npm-in-list.t  or-filter.t  run.t
