opam-version: "2.0"
synopsis:
  "An opam plugin to check for npm depexts inside the node_modules folder"
description:
  "Provides the `opam check-npm-deps` command, which given an opam switch, gathers all the depexts belonging to the npm platform and their version constraints, and checks the `node_modules` folder to see if the constraints are satisfied."
maintainer: ["Javier Chávarri <javier.chavarri@ahrefs.com>"]
authors: ["Javier Chávarri <javier.chavarri@ahrefs.com>"]
tags: ["melange" "org:ahrefs"]
license: "MIT"
homepage: "https://github.com/ahrefs/opam-check-npm-deps"
bug-reports: "https://github.com/ahrefs/opam-check-npm-deps/issues"
depends: [
  "ocaml" {>= "4.14.0"}
  "reason" {>= "3.8.1"}
  "dune" {>= "3.8"}
  "opam-client" {>= "2.5" & < "2.6"}
  "mccs" {>= "1.1+14"}
  "angstrom" {>= "0.15.0"}
  "fmt" {>= "0.9.0"}
  "bos"
  "lwt_ppx"
  "ppx_deriving_yojson"
  "odoc" {with-doc}
]
available: opam-version >= "2.5" & opam-version < "2.6"
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/ahrefs/opam-check-npm-deps.git"
flags: plugin
x-maintenance-intent: [ "(latest)" ]
